# DevelopProjects

./: README.md
CMD/: cmd.txt
CPlusPlus/Code10_Stocks/: CMakeLists.txt
CPlusPlus/Code10_Stocks/Stocks/: CMakeLists.txt  LoadLibra.cpp  LoadLibra.h  StockSortInfo.cpp  StockSortInfo.h  TongHuaShunApis.h  main.cpp  pch.cpp  pch.h
CPlusPlus/Code10_Stocks/Stocks/config/: focus.json
CPlusPlus/Code11_Hiredis/: CMakeLists.txt
CPlusPlus/Code11_Hiredis/src/: MyRedis.cpp  MyRedis.h  main.cpp
CPlusPlus/Code1_Parse/: CMakeLists.txt
CPlusPlus/Code1_Parse/Main/: CMakeLists.txt
CPlusPlus/Code1_Parse/Main/src/: main.cpp  pch.h
CPlusPlus/Code1_Parse/ParseCalculate/: CMakeLists.txt
CPlusPlus/Code1_Parse/ParseVInt/: CMakeLists.txt  ParseVInt_10.cpp  ParseVInt_10.h
CPlusPlus/Code1_Parse/src/: CMakeLists.txt  main.cpp
CPlusPlus/Code2_BoostSocket/: CMakeLists.txt
CPlusPlus/Code2_BoostSocket/ClientAsync/: CMakeLists.txt  main.cpp  pch.h
CPlusPlus/Code2_BoostSocket/ClientSync/: CMakeLists.txt  main.cpp
CPlusPlus/Code2_BoostSocket/ServerAsync/: CMakeLists.txt  main.cpp
CPlusPlus/Code2_BoostSocket/ServerSync/: CMakeLists.txt  main.cpp  pch.h
CPlusPlus/Code2_Net/: CMakeLists.txt
CPlusPlus/Code2_Net/Client/: CMakeLists.txt
CPlusPlus/Code2_Net/Client/src/: ClientAsyncBoost.cpp  ClientAsyncBoost.h  ClientSelect.cpp  ClientSelect.h  ClientSync.cpp  ClientSync.h  ClientSyncBoost.cpp  ClientSyncBoost.h  main.cpp  pch.h
CPlusPlus/Code2_Net/ClientSimple/: CMakeLists.txt  client_base.h  client_use.cpp  client_use.h  main.cpp  pch.h
CPlusPlus/Code2_Net/Server/: CMakeLists.txt
CPlusPlus/Code2_Net/Server/src/: Server1.cpp  Server1.h  ServerSelect.cpp  ServerSelect.h  ServerSync.cpp  ServerSync.h  ServerSyncBoost.cpp  ServerSyncBoost.h  main.cpp  pch.h
CPlusPlus/Code2_Net/ServerSimple/: CMakeLists.txt  main.cpp  server_accept.cpp  server_accept.h  server_base.h  server_use.cpp  server_use.h
CPlusPlus/Code2_Net/ServerSimple_frame/: CMakeLists.txt  main.cpp  pch.h  socket_listen.cpp  socket_listen.h  socket_work.cpp  socket_work.h
CPlusPlus/Code3_GLPK/src/: main.cpp  pch.h
CPlusPlus/Code3_GLPK_WBR/: CMakeLists.txt
CPlusPlus/Code3_GLPK_WBR/GLPK/: CMakeLists.txt
CPlusPlus/Code3_GLPK_WBR/src/: handle_database.cpp  handle_database.h  main.cpp  pch.cpp  pch.h  predefine.h
CPlusPlus/Code3_GLPK_Wife/: CMakeLists.txt  ExeComand.sh  supers_days_16.csv
CPlusPlus/Code3_GLPK_Wife/src/: handle_raw_data.cpp  handle_raw_data.h  main.cpp  pch.h
CPlusPlus/Code3_Sqlite_Read/: sql.txt
CPlusPlus/Code3_Sqlite_Read/src/: generate_data.cpp  generate_data.h  handle_database.cpp  handle_database.h  main.cpp  predefine.h  sqlite_operator.cpp
CPlusPlus/Code4_Sqlite_WBR/: CMakeLists.txt  sql.txt
CPlusPlus/Code4_Sqlite_WBR/src/: handle_raw_data.cpp  handle_raw_data.h  main.cpp  pch.h  predefine.h  sqlite_writedata.cpp  sqlite_writedata.h
CPlusPlus/Code4_Sqlite_Write/: CMakeLists.txt  ResultData.txt  sql.txt  supers_days_16.csv
CPlusPlus/Code4_Sqlite_Write/src/: handle_raw_data.cpp  handle_raw_data.h  main.cpp  pch.cpp  pch.h  predefine.h  sqlite_operator.h  sqlite_writedata.cpp  sqlite_writedata.h
CPlusPlus/Code5_Pack_GLPK/: CMakeLists.txt
CPlusPlus/Code5_Pack_GLPK/GLPK_Pack/: CMakeLists.txt
CPlusPlus/Code5_Pack_GLPK/GLPK_Pack/src/: glpk_cal.cpp  glpk_cal.h  main.cpp  pch.h  result_json.cpp  result_json.h
CPlusPlus/Code6_Protobuf/: CMakeLists.txt
CPlusPlus/Code6_Protobuf/proto_dir/: CMakeLists.txt  common_pack_proto.h  server2client.pb.cc  server2client.pb.h  server2client.proto
CPlusPlus/Code6_Protobuf/src/: CMakeLists.txt  datas_recv.cpp  datas_recv.h  datas_send.cpp  datas_send.h  main.cpp  server2client.pb.cc  server2client.pb.h  use_for_test.cpp  use_for_test.h
CPlusPlus/Code7_NetEpoll/: CMakeLists.txt
CPlusPlus/Code7_NetEpoll/SerEpoll/: CMakeLists.txt  epoll_sokcets.cpp  epoll_sokcets.h  main.cpp  my_connection.cpp  my_connection.h  my_server_listen.cpp  my_server_listen.h
CPlusPlus/Code8_Pool/: CMakeLists.txt
CPlusPlus/Code8_Pool/src/: main.cpp  my_memorypool.h  my_threadpool.h  pools_use.cpp  pools_use.h
CPlusPlus/Code9_Rpc/: CMakeLists.txt  guo_smallarrays.h  guo_stdtypes.h
CPlusPlus/Code9_Rpc/client/: CMakeLists.txt  main.cpp  pch.h  test_structs.h
CPlusPlus/SDK1/: sdk_files_csv.cpp  sdk_files_csv.h  sdk_files_read.cpp  sdk_files_read.h  sdk_files_write.cpp  sdk_files_write.h  sdk_glpk_data.cpp  sdk_glpk_data.h
CPlusPlus/proto_dir/: CMakeLists.txt  protobufs.cmake  protos.sh  server2client.proto
Code_CPP/Code1/: CMakeLists.txt
Code_CPP/Code1/Main/: CMakeLists.txt
Code_CPP/Code1/Main/Main/: MainPara.cpp  pch.h
Code_CPP/Code1/Parase/: CMakeLists.txt
Code_CPP/Code1/Parase/Parase/: ParaUse.cpp  ParaUse.h  Parase.cpp  Parase.h  pch.h
Code_CPP/Code2/: CMakeLists.txt
Code_CPP/Code2/JsonWrite/: CMakeLists.txt
Code_CPP/Code2/JsonWrite/JsonWrite/: main.cpp
Code_CPP/Code2/JsonWrite/files/: pch.h
Code_CPP/Code2/Third_JsonCpp/: CMakeLists.txt
Code_CPP/Code3/: CMakeLists.txt
Code_CPP/Code3/boost_use/: main.cpp  pch.h
Code_CPP/Code4/: code.txt
Code_Python/: Installs.txt
Code_Python/Code1/: ConfIni.json  main.py
Code_Python/Code1_Regex/: ConfIni.json  main.py
Code_Python/Code2_CrawlerSimple/: MyIndex.html  main.py
Code_Python/Code3_CrawlerAdvance/: main.py
Code_Python/Code4_Stocks/: main.py
Code_ThirdLibra/JsonCpp/: CMakeLists.txt
Code_Win/: DefiOutMonitUE.cpp  DefiOutMonitUE.h
Code_Win/AudioExample/: AudioDlg.sln
Code_Win/DlgExample/: DlgExample.sln
Code_Win/SerExample/: SerExample.sln
Code_Win/SetStartup/: SetStartup.sln
DataClass/: Location.java  LowerSolutions.java  Node.java  SubArea.java  SuperArea.java  UpperSolutions.java
Manager/: DataGeneration.java  DataGeneration2.java  DatatoExcel.java  Lower_level_model.java  ResultstoExcel.java  Upper_level_model.java
Optimization/: Hello.java  Hello2.java  Hello3.java  MainForModelsRealData.java  MainForSimulationData.java  MainMethod.java  SolveLowerFromExcelFile.java  Trial.java
Third/: ReadMe.txt
UsualCommands/: Linux.txt  Windows.txt
(+64 files in other folders)
